# local-rag

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.example.toml  docker-compose.yml  local-rag-vs-qmd.html  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-and-typecheck.sh
.claude/skills/ship/: SKILL.md
docs/: cloud.html  index.html
plan/local/: agent-team-plan.md  cli-model-reference.md  competitive-brief.md  local-rag-architecture.jsx  local-rag-spec.md  mcp-tool-guidance-agent-plan.md  mcp-tool-guidance-spec.md  semantic-chunking-spec.md  spec-review.md
scripts/: download-models.sh
src/rag/: cli.py  config.py  dashboard.py  init.py  protocols.py  results.py  types.py
src/rag/db/: async_upsert.py  models.py  qdrant.py
src/rag/mcp/: prompts.py  server.py  tools.py
src/rag/pipeline/: __init__.py  chunker.py  classifier.py  dedup.py  embedder.py  runner.py  summarizer.py
src/rag/pipeline/parser/: docling_parser.py  text_parser.py
src/rag/retrieval/: citations.py  engine.py  query_analyzer.py  reranker.py
src/rag/sync/: scanner.py
tests/: test_async_upsert.py  test_chunker.py  test_citations.py  test_cli.py  test_config.py  test_dedup.py  test_embedder.py  test_mcp.py  test_mcp_prompts.py  test_normalizer.py  test_parser.py  test_progress_display.py  test_qdrant.py  test_reranker.py  test_retrieval.py  test_runner.py  test_scanner.py
tests/e2e/: conftest.py  test_dedup.py  test_error_handling.py  test_improvements.py  test_index_pipeline.py
