[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[project]
name = "dropbox-rag"
version = "0.1.0"
description = "Local RAG system for document retrieval via MCP"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "sentence-transformers>=3.0",
    "onnxruntime>=1.17",
    "watchdog>=4.0",
    "tiktoken>=0.7",
    "qdrant-client>=1.12",
    "mcp>=1.25,<2",
    "pydantic>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.8.0",
    "pydantic[mypy]",
]

[project.scripts]
rag = "rag.cli:main"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "C4",
    "SIM", "TC", "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring Docker and models"]
